tests/baselines/reference/instantiatedBaseTypeConstraints2.errors.txt
tests/cases/compiler/instantiatedBaseTypeConstraints2.ts(1,13): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/compiler/instantiatedBaseTypeConstraints2.ts(1,23): error TS2464: Illegal reference A in constraint.
tests/cases/compiler/instantiatedBaseTypeConstraints2.ts(1,32): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/compiler/instantiatedBaseTypeConstraints2.ts(1,42): error TS2315: Type 'A' is not generic.


==== tests/cases/compiler/instantiatedBaseTypeConstraints2.ts (4 errors) ====
    interface A<T extends A<T, S>, S extends A<T, S>> { }
                ~~~~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                          ~~~~~~~
!!! error TS2464: Illegal reference A in constraint.
                                   ~~~~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                             ~~~~~~~
!!! error TS2315: Type 'A' is not generic.
    interface B<U> extends A<B<U>, B<U>> { }